got return results but issue with return jumping out of function

--- a/style.css
+++ b/style.css
@@ -26,10 +26,6 @@ html {
   color: white;
 }
 
-/*contains both columns to do flex-box*/
-.column-container {
-  
-}
 
 button {
   color: #FFFFFF;
